--- a/it_modernization/agency_comprehensive.yaml
+++ b/it_modernization/agency_comprehensive.yaml
@@ -3967,27 +3967,27 @@ OPM:
   - Christopher Stanley
   - Chris Young
   events:
-  - date: 2025-01-16
-    type: report
-    event: Noah Peters receives a job offer to work at the OPM. He describes it as very general and vague.
-    comment: Date is approximate
-    named:
-    - Noah Peters
-    source: https://storage.courtlistener.com/recap/gov.uscourts.cand.444883/gov.uscourts.cand.444883.188.1.pdf
-    agency: OPM
-  - date: 2025-01-16
+  - date: 2025-01-16~
     type: report
     event: Noah Peters recalls discussing the concept of using administrative leave to sideline federal employees with Keenan Kmiec before January 20th
-    comment: Date is approximate
+    fuzz: Date is approximate in deposition
     named:
     - Noah Peters
     - Keenan Kmiec
     source: https://storage.courtlistener.com/recap/gov.uscourts.cand.444883/gov.uscourts.cand.444883.188.1.pdf
     agency: OPM
-  - date: 2025-01-16
+  - date: 2025-01-16~
+    type: report
+    event: Noah Peters receives a job offer to work at the OPM. He describes it as very general and vague.
+    fuzz: Date is approximate in deposition
+    named:
+    - Noah Peters
+    source: https://storage.courtlistener.com/recap/gov.uscourts.cand.444883/gov.uscourts.cand.444883.188.1.pdf
+    agency: OPM
+  - date: 2025-01-16~
     type: report
     event: Noah Peters starts working on two memos around temporary authorities for Schedule C and another on probationary employees and admininstrative leave. These are to be issued on January 20th.
-    comment: Date is approximate
+    fuzz: Date is approximate in deposition
     named:
     - Noah Peters
     source: https://storage.courtlistener.com/recap/gov.uscourts.cand.444883/gov.uscourts.cand.444883.188.1.pdf
