--- a/it_modernization/data/systems.yaml
+++ b/it_modernization/data/systems.yaml
@@ -402,3 +402,13 @@
   pia: https://www.ssa.gov/privacy/pia/eDib%20PIA%20OPD%20Final_Feb%201,%202018.pdf
   sorn: https://www.govinfo.gov/content/pkg/FR-2020-06-04/pdf/2020-12067.pdf
   agency: SSA
+
+- name: PSSNAP
+  id: PSSNAP
+  description: FIXME
+  agency: SSA
+
+- name: IRON
+  id: IRON
+  description: FIXME
+  agency: SSA
